2006-07-07  Ethan A Merritt <merritt@u.washington.edu>

	* src/help.c (FindHelp): Add missing pair of brackets to disambiguate
	if/if/else syntax.

	* src/command.c (history_command): Fix segfault if re-execution of a
	previous command terminates via int_error().
	Bug #1514453

	* demo/rectangle.dem: Add reset at end, and prompts at 'pause -1'.

2006-07-06  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc term/*.trm: Remove redundant help keys; i.e. those
	that are distinguished only by one being a short form of the other.
	No change in help or documentation behavior is intended.
	E.g.
	    ?set terminal cgm
	    ?set term cgm         %% delete this one

2006-07-06  Ethan A Merritt <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_linetype EPSLATEX_set_color):
	Keep track of last color and/or linetype set, and filter out
	duplicate requests for the same setting. It remains true that the
	color change command is sent to both the *.eps and *.tex output stream,
	whereas in general only one of the two needs to see it.
	Bug #1517932.

	* tutorial/tutorial.tex tutorial/eg7.plt:  Make the file names
	of the 7th example plot match the other six examples.

2006-07-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (wxtPanel::Draw):
	(wxtPanel::DrawToDC):
	(wxtPanel::OnPaint):
	Small rework of the double-buffering to fully comply with wxWidgets
	API.

2006-07-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c docs/gnuplot.doc: New options 
	'set mouse {noruler|ruler {at x,y}}'.

	* src/mouse.h src/mouse.c: New function set_ruler() to (un)set ruler
	(at a given position).

2006-07-06  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* demo/bivariat.dem:
	- Adjust the step size so the range of integration is an integral
	  number of steps
	- Use Simpson's rule rather than just taking the function value at
	  one end of each step